--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,6 +141,9 @@
     <string name="request_sucess">操作成功</string>
     <string name="request_error">操作失败</string>
     <string name="home">首页</string>
+    <string name="teacher">约教练</string>
+    <string name="exam">考试</string>
     <string name="mine">我的</string>
     <string name="copy">复制</string>
+    <string name="feed_back_hint_notice">请输入产品意见,我们将不断优化体验</string>
 </resources>
