--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,4 +146,7 @@
     <string name="mine">我的</string>
     <string name="copy">复制</string>
     <string name="feed_back_hint_notice">请输入产品意见,我们将不断优化体验</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
